--- a/src/assets/stylesheets/_articles.scss
+++ b/src/assets/stylesheets/_articles.scss
@@ -1,4 +1,39 @@
-/*BASIC ARTICLE STYLING*/
+// --------------------------------------------------------------------
+// --------------------------------------------------------------------
+// --------------------------------------------------------------------
+// --------------------------------------------------------------------
+// --------------------------------------------------------------------
+// --------------------------------------------------------------------
+// --------------------------------------------------------------------
+//
+//               _____   _______    ____    _____    _
+//              / ____| |__   __|  / __ \  |  __ \  | |
+//             | (___      | |    | |  | | | |__) | | |
+//              \___ \     | |    | |  | | |  ___/  | |
+//              ____) |    | |    | |__| | | |      |_|
+//             |_____/     |_|     \____/  |_|      (_)
+//
+//
+//
+//					(or not, I mean... I'm a text file, not a cop)
+// --------------------------------------------------------------------
+// --------------------------------------------------------------------
+// --------------------------------------------------------------------
+// --------------------------------------------------------------------
+//
+//  Reading this file would give you the solution to the last exercise
+//  I know that might be tempting, but it is much more rewarding to build
+//  your own code.
+//
+//  Making mistakes and encountering the very frustrating little problems
+//  of html and css is an important part of the learning process.
+//
+//  Even if you decide to carry on and read the solution, it is highly
+//  recommended that you try to understand why does it work rather than just
+//  copying and pasting. :)
+//
+// --------------------------------------------------------------------
+// --------------------------------------------------------------------
 
 img {
 	border: 1px solid $border-line;
@@ -34,7 +69,7 @@ img {
 	color: $article-info-color;
 	font-family: $article-info-font;
 	font-size: 12px;
-	font-size: 0.75em;	
+	font-size: 0.75em;
 }
 .by-author {
 	padding: 0 5px 0 5px;
@@ -208,7 +243,7 @@ img {
 		margin: 30px 0 0 0;
 		text-align: left;
 
-		img { 
+		img {
 			display: inline-block;
 			margin: 0 15px 0 0;
 			vertical-align: top;
