--- a/src/assets/stylesheets/exercise_04.scss
+++ b/src/assets/stylesheets/exercise_04.scss
@@ -3,6 +3,9 @@
 // You can find the solution in _articles.scss, but we don't recommend you going
 // there until you've planned
 //
+// Tip: You can import the reset, typgoraphy and color stylesheets to help you
+// get started
+//
 // NB: There are many properties of css we haven't explored together today, you
 // can always visit https://developer.mozilla.org/en-US/docs/Web/CSS/Reference
 // to find what other things you can change on a website.
